sample-apps/httpd/manifests/00_namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: test-httpd
  labels:
    app: test-httpd
